--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,6 @@
-<div id="root"></div>
+<div>
+  <p id='hours'></p>
+  <p id='mins'></p>
+  <p id='secs'></p>
+  <p>Milli secs:<p id="msecs"></p></p>
+</div>
